microservices/service-2/kubernetes-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  type: ClusterIP
  selector:
    app: service-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
